--- a/AWS/S3.md
+++ b/AWS/S3.md
@@ -1,1 +1,230 @@
-Add AWS S3 documentation
+Amazon Web Services – Simple Storage Service (S3)
+
+1️⃣ What is S3?
+
+S3 is:
+
+Object storage service
+
+Highly durable (11 9’s durability – 99.999999999%)
+
+Region-based service
+
+Accessible over HTTP/HTTPS
+
+Unlike EC2 storage, S3 is NOT block storage.
+
+2️⃣ Why S3 is Different from EBS and EFS
+Feature	S3	EBS	EFS
+Storage Type	Object	Block	File
+Attach to EC2?	No	Yes (1 instance at a time)	Yes (multiple)
+Access Method	HTTP/HTTPS	Mounted as disk	NFS mount
+Scalability	Unlimited	Limited to volume size	Scales automatically
+Use Case	Static files, backups, logs	OS, database storage	Shared file system
+🔥 Core Difference
+
+EBS → behaves like a hard disk
+
+EFS → behaves like network file system
+
+S3 → stores data as objects inside buckets
+
+3️⃣ How S3 Stores Data
+
+S3 stores:
+
+Object =
+
+Data (file)
+
+Metadata
+
+Unique Key
+
+Structure:
+
+Bucket → Object → Key
+
+There are no “real folders” in S3.
+Folders are logical prefixes.
+
+4️⃣ Bucket Rules
+
+Bucket name must be globally unique
+
+No capital letters
+
+No special characters except hyphen
+
+Created inside a region
+
+Once created → region cannot be changed
+
+5️⃣ S3 Architecture
+
+S3 uses distributed architecture:
+
+Data replicated across multiple Availability Zones
+
+High availability
+
+High durability
+
+Fault tolerant
+
+Even if one AZ fails → data still available.
+
+6️⃣ Access Control in S3
+
+By default:
+Bucket and objects are private.
+
+Access can be controlled using:
+
+1️⃣ ACL (Access Control List)
+
+Legacy method
+
+Applied at bucket or object level
+
+2️⃣ Bucket Policy (Preferred)
+
+JSON-based policy
+
+Fine-grained permissions
+
+3️⃣ IAM Policy
+
+Identity-based control
+
+7️⃣ Versioning
+
+When versioning is enabled:
+
+Overwriting does NOT delete old file
+
+Instead, creates new version
+
+You can retrieve older versions
+
+Protects against accidental deletion
+
+If you delete object:
+Delete marker is created, not actual deletion.
+
+8️⃣ Storage Classes
+
+S3 provides different storage tiers:
+
+Standard (frequent access)
+
+Standard-IA (infrequent access)
+
+One Zone-IA
+
+Glacier (archival)
+
+Glacier Deep Archive
+
+Used to optimize cost.
+
+9️⃣ Lifecycle Management
+
+Automates:
+
+Transition objects between storage classes
+
+Expire/delete objects after X days
+
+Example:
+After 30 days → move to Glacier
+After 365 days → delete permanently
+
+Used for cost optimization.
+
+🔟 Cross-Region Replication (CRR)
+
+Replicates objects:
+
+Source bucket → Destination bucket (different region)
+
+Important:
+
+Versioning must be enabled
+
+IAM role required
+
+Replication is asynchronous
+
+Correction to your note:
+
+If you delete object in source,
+Replication depends on delete marker replication setting.
+
+Deletion in destination does NOT automatically delete source.
+
+1️⃣1️⃣ S3 Endpoint
+
+S3 is accessed using:
+
+https://bucket-name.s3.region.amazonaws.com
+
+This is called S3 service endpoint.
+
+1️⃣2️⃣ Static Website Hosting
+
+S3 can host:
+
+Static HTML
+
+CSS
+
+JS
+
+Images
+
+No server required.
+
+You enable:
+“Static Website Hosting”
+
+Then bucket becomes publicly accessible (with proper policy).
+
+This avoids:
+
+Creating EC2
+
+Configuring web server
+
+Managing patches
+
+But:
+It cannot run backend code.
+
+🔥 Advanced Interview Questions You Must Prepare
+
+Why S3 gives 11 9’s durability?
+
+Difference between durability and availability?
+
+Why S3 cannot be mounted like EBS?
+
+When to use EFS instead of S3?
+
+What happens if two users upload same object name?
+
+Explain eventual consistency in S3.
+
+How do you secure S3 bucket from public access?
+
+🚨 Important Real-World Concepts
+
+You must also know:
+
+S3 is eventually consistent for overwrite operations (older behavior, mostly strong consistency now)
+
+Public access block settings
+
+Pre-signed URL
+
+Server-side encryption (SSE-S3, SSE-KMS)
